--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -2,54 +2,55 @@
     <string name="app_name">Meet Eat Save</string>
     <string name="open">open</string>
     <string name="close">close</string>
-    <string name="please_fill_the_information_of_your_ad">Please Fill the Information of your Ad</string>
-    <string name="title">Title</string>
-    <string name="food_art">Food Art</string>
-    <string name="city">City</string>
-    <string name="price">Price</string>
-    <string name="number_of_seats">Number of Seats</string>
-    <string name="date">Date</string>
-    <string name="time">Time</string>
-    <string name="finish">Finish</string>
-    <string name="angebote">Advertisements</string>
-    <string name="food">Food:</string>
-    <string name="city2">City:</string>
-    <string name="date2">Date:</string>
-    <string name="time2">Time:</string>
-    <string name="title2">Title:</string>
-    <string name="price2">Price:</string>
-    <string name="seats2">Seats:</string>
-    <string name="reserve_a_seat">Reserve a Seat</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
-    <string name="age">Age</string>
-    <string name="telephone_number">Telephone Number</string>
-    <string name="street_and_house_number">Street and house number</string>
-    <string name="gender">Gender</string>
+    <string name="please_fill_the_information_of_your_ad">Bitte geben Sie die Informationen Ihrer Anzeige ein</string>
+    <string name="title">Titel</string>
+    <string name="food_art">Lebensmittelkunst</string>
+    <string name="city">Stadt</string>
+    <string name="price">Preis</string>
+    <string name="number_of_seats">Anzahl der Sitze</string>
+    <string name="date">Datum</string>
+    <string name="time">Zeit</string>
+    <string name="finish">Fertig</string>
+    <string name="angebote">Angebote</string>
+    <string name="food">Essen:</string>
+    <string name="city2">Stadt:</string>
+    <string name="date2">Datum:</string>
+    <string name="time2">Zeit:</string>
+    <string name="title2">Titel:</string>
+    <string name="price2">Preis:</string>
+    <string name="seats2">Sitze:</string>
+    <string name="reserve_a_seat">Platz reservieren</string>
+    <string name="first_name">Vorname</string>
+    <string name="last_name">Nachname</string>
+    <string name="age">Alter</string>
+    <string name="telephone_number">Telefonnummer</string>
+    <string name="street_and_house_number">Straße und Hausnummer</string>
+    <string name="gender">Geschlecht</string>
     <string name="plz">PLZ</string>
-    <string name="enter_your_name_please">Enter your name please</string>
-    <string name="submit">Submit</string>
-    <string name="cancel">Cancel</string>
-    <string name="please_enter_your_email_in_the_box_n_and_then_press_send">Please Enter your Email in the Box  and then Press Send</string>
+    <string name="enter_your_name_please">Bitte geben Sie Ihren Namen ein</string>
+    <string name="submit">einreichen</string>
+    <string name="cancel">Stornieren</string>
+    <string name="please_enter_your_email_in_the_box_n_and_then_press_send">Bitte geben Sie Ihre E-Mail-Adresse in das Feld ein und klicken Sie dann auf Senden</string>
     <string name="e_mail">E-mail</string>
-    <string name="back_to_login">Back to Login</string>
-    <string name="send">Send</string>
-    <string name="password">Password</string>
-    <string name="login">Login</string>
-    <string name="forgot_my_password">Forgot my Password</string>
-    <string name="register">Register!</string>
-    <string name="already_a_member">Already a Member!</string>
+    <string name="back_to_login">Zurück zur Anmeldung</string>
+    <string name="send">Senden</string>
+    <string name="password">Passwort</string>
+    <string name="login">Einloggen</string>
+    <string name="forgot_my_password">Ich habe mein Passwort vergessen</string>
+    <string name="register">Registrieren!</string>
+    <string name="already_a_member">Schon ein Mitglied!</string>
     <string name="t">T</string>
-    <string name="username">username</string>
-    <string name="city3">city</string>
-    <string name="search">Search</string>
-    <string name="my_offers">My Offers</string>
-    <string name="make_an_offer">Make an offer</string>
-    <string name="help">Help</string>
-    <string name="my_account">My Account</string>
-    <string name="profile">Profile</string>
-    <string name="logout">Logout</string>
-    <string name="login_or_register">Login / Register</string>
+    <string name="username">Nutzername</string>
+    <string name="city3">Stadt</string>
+    <string name="search">Suche</string>
+    <string name="my_offers">Meine Angebote</string>
+    <string name="make_an_offer">Anzeige aufgeben</string>
+    <string name="help">Hilfe</string>
+    <string name="my_account">Mein Konto</string>
+    <string name="profile">Profil</string>
+    <string name="logout">Ausloggen</string>
+    <string name="login_or_register">Einloggen / Registrieren</string>
+
 
     <string-array name="list_of_countries">
         <item>Berlin</item>
